# rfgui

./: .gitignore  .output.txt  AGENTS.md  CUSTOM_RETAINED_COMPONENTS.md  Cargo.toml  LICENSE  README.md  RETAINED_AUTO.md  ROADMAP.md  about.hbs  about.toml  build.rs
.github/workflows/: ci.yml  deploy-pages.yml  native-gpu-release.yml
docs/design/: inline-formatting-context.md  layout-functional-refactor.md
examples/: 01_window.rs  Cargo.toml  build.rs
examples/01_window/: Cargo.toml  Trunk.toml  app.rs  bootstrap.js  build.rs  components.rs  index.html  platform.rs  scene.rs  state.rs  utils.rs
examples/01_window/scene_windows/: about_panel.rs  component_test.rs  image_test.rs  inline_test.rs  inspector_panel.rs  mod.rs  render_test.rs  transition_lab.rs
examples/01_window/src/: main.rs
examples/src/: lib.rs  web_runner.rs  winit_key_map.rs  winit_runner.rs  word_segmenter_bridge.rs
lib/rfgui-components/: Cargo.toml  build.rs
lib/rfgui-components/src/: button.rs  checkbox.rs  host.rs  lib.rs  material_symbol.rs  number_field.rs  register.rs  select.rs  slider.rs  switch.rs  theme.rs  window.rs
lib/rfgui-components/src/icons/: material_symbols.rs  mod.rs
lib/rfgui-components/src/inputs/: button.rs  checkbox.rs  icon_button.rs  mod.rs  number_field.rs  select.rs  slider.rs  switch.rs  toggle_button.rs  toggle_button_group.rs
lib/rfgui-components/src/layout/: accordion.rs  mod.rs  tree_view.rs  window.rs
lib/rfgui-components/src/utils/: alert.rs  mod.rs  snackbar.rs  tooltip.rs
lib/rfgui-segmenter/: Cargo.toml
lib/rfgui-segmenter/src/: fallback.rs  lib.rs  macos.rs  web.rs  windows.rs
rsx-macro/: Cargo.toml
rsx-macro/src/: lib.rs
scripts/: test-production-gpu-closure.sh
skills/: m00-core.md  m01-ownership.md  m02-resource.md  m03-style-system.md  m04-ui-layout.md  m05-components.md  m06-error-handling.md  m07-concurrency.md  unsafe-checker.md
skills/m00-core/: SKILL.md
skills/m01-ownership/: SKILL.md
skills/m02-resource/: SKILL.md
skills/m03-style-system/: SKILL.md
skills/m04-ui-layout/: SKILL.md
skills/m05-components/: SKILL.md
skills/m06-error-handling/: SKILL.md
skills/m07-concurrency/: SKILL.md
skills/m08-state-management/: SKILL.md
skills/m09-code-style/: SKILL.md
skills/m10-common-errors/: SKILL.md
skills/m11-rfgui-components-lib/: SKILL.md
skills/m12-element-debug/: SKILL.md
skills/m12-element-debug/agents/: openai.yaml
skills/unsafe-checker/: SKILL.md
src/: app.rs  lib.rs
src/platform/: callback.rs  desktop_backend.rs  headless.rs  input.rs  mod.rs  web.rs  web_backend.rs  word_segmenter.rs
src/shader/: debug_overlay.wgsl  layer_blur.wgsl  layer_composite.wgsl  present_surface.wgsl  present_surface_web.wgsl  rect.wgsl  rect_alpha.wgsl  rect_border.wgsl  rect_fill.wgsl  rect_opaque.wgsl  shadow_blur.wgsl  shadow_composite.wgsl  solid_color.wgsl  text.wgsl  texture_composite.wgsl
src/style/: background.rs  computed_style.rs  gradient.rs  interpolate.rs  layout_state.rs  mod.rs  parsed_style.rs  style_props.rs
src/style/color/: hex_color.rs  mod.rs  oklch_color.rs
src/style/parsed_style/: mod.rs
src/transition/: animation.rs  layout_transition.rs  mod.rs  scroll_transition.rs  style_transition.rs  time_function.rs  visual_transition.rs
src/ui/: component.rs  context.rs  event.rs  host.rs  mod.rs  node_id.rs  provider.rs  reconciler.rs  render_backend.rs  rsx_tree.rs  runtime.rs  state.rs  use_viewport.rs
src/view/: debug.rs  fiber_work.rs  font_system.rs  host_element.rs  image_resource.rs  inline_formatting_context.rs  inline_text_pass_adapter.rs  mod.rs  node_arena.rs  popup_stack.rs  promotion.rs  promotion_builder.rs  raster_cost.rs  renderer_adapter.rs  renderer_adapter_tests.rs  sampled_texture.rs  svg_resource.rs  tags.rs  test_support.rs  text_layout.rs  viewport.rs
src/view/base_component/: core.rs  element.rs  hit_test.rs  image.rs  mod.rs  resource_slot.rs  style_consumer.rs  svg.rs  text.rs  text_area.rs
src/view/base_component/element/: event_handler_props.rs  event_target.rs  helpers.rs  impl_core.rs  impl_layout.rs  impl_render.rs  impl_scroll.rs  layout_trait.rs  mod.rs  render_trait.rs  tests.rs
src/view/base_component/image/: tests.rs
src/view/base_component/svg/: tests.rs
src/view/base_component/text/: cache.rs  events.rs  hit_test.rs  inline_plan.rs  layout.rs  measure.rs  mod.rs  profile.rs  props.rs  render.rs  style.rs  tests.rs
src/view/base_component/text_area/: caret_map.rs  edit.rs  events.rs  hit_test.rs  ime_context.rs  inline_ifc.rs  (+11 more)
src/view/components/: button.rs  checkbox.rs  mod.rs  number_field.rs  select.rs  slider.rs  switch.rs
src/view/compositor/: layer_tree.rs  layerizer.rs  mod.rs  paint_generation.rs  property_tree.rs  raster_cache.rs
src/view/fiber_work/: tests.rs
src/view/frame_graph/: buffer_resource.rs  builder.rs  dependency_resource.rs  frame_graph.rs  mod.rs  render_node.rs  slot.rs  texture_resource.rs
src/view/inline_formatting_context/: tests.rs
src/view/layout/: flex_solver.rs  inline_fragment.rs  measure.rs  mod.rs  place.rs  types.rs
src/view/paint/: artifact.rs  compiler.rs  coverage_manifest.rs  frame_plan.rs  frame_recorder.rs  mod.rs  recorder.rs  retained_surface_executor.rs  scroll_content.rs  scroll_scene.rs  scroll_tiles.rs  tests.rs
src/view/render_pass/: blur_module.rs  blur_pass.rs  clear_pass.rs  composite_layer_pass.rs  debug_overlay_pass.rs  draw_rect_pass.rs  mod.rs  present_surface_pass.rs  rect_shader.rs  render_target.rs  render_target_store.rs  retain_layer_pass.rs  shadow_module.rs  shadow_pass.rs  text_pass.rs  texture_composite_pass.rs
src/view/renderer_adapter_tests/: layout_scene_tests.rs  rsx_identity_tests.rs  style_bridge_tests.rs  style_inheritance_tests.rs  text_area_projection_tests.rs  text_area_style_tests.rs  text_area_wrap_tests.rs
src/view/viewport/: clipboard_tests.rs  compositor_sync.rs  debug.rs  dispatch.rs  frame.rs  gpu_resources.rs  input.rs  lifecycle.rs  m2_incremental_tests.rs  mod.rs  promotion_runtime.rs  render.rs  scene_helpers.rs  tests.rs  transitions_tick.rs
(+208 files in other folders)
