[package]
name = "rfgui"
version = "0.1.0-alpha.2"
edition = "2024"
description = "An innovative gui framework"
license = "MIT"
repository = "https://github.com/jakehuang2232/rfgui"

[workspace]
members = [
    "rsx-macro",
    "lib/rfgui-components",
    "examples/01_window",
]

[dependencies]
wgpu = "28.0.0"
bytemuck = { version = "1.14", features = ["derive"] }
once_cell = "1.21.3"
glyphon = "0.10"
arboard = "3.6.1"
image = { version = "0.25", default-features = false, features = ["default-formats"] }
resvg = "0.45.1"
rfgui-rsx = { version = "0.1.0-alpha.1", path = "rsx-macro" }
glam = "0.30.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2"

[profile.dev]
opt-level = 1
