[package]
name = "rfgui"
version = "0.1.0-alpha.5"
edition = "2024"
description = "An innovative gui framework"
license = "MIT"
repository = "https://github.com/jakehuang2232/rfgui"

[workspace]
members = [
    "rsx-macro",
    "lib/rfgui-components",
    "examples",
]

[dependencies]
wgpu = { version = "29.0.1", features = ["naga-ir"] }
bytemuck = { version = "1.14", features = ["derive"] }
once_cell = "1.21.3"
cosmic-text = "0.18.2"
image = { version = "0.25", default-features = false, features = ["default-formats"] }
resvg = "0.45.1"
rfgui-rsx = { version = "0.1.0-alpha.2", path = "rsx-macro" }
glam = "0.30.5"
rustc-hash = "2"
naga_oil = { version = "0.22", default-features = false }
naga = "29.0.1"
smol_str = "0.3"
bitflags = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.6.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-time = "1"
web-sys = { version = "0.3.85", features = ["HtmlCanvasElement", "HtmlElement", "CssStyleDeclaration", "Document", "FontFace", "FontFaceSet", "Response", "Window"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2"

[profile.dev]
opt-level = 1

[profile.web-debug]
inherits = "dev"
debug = 2
strip = "none"

[profile.web-release]
inherits = "release"
debug = 2
strip = "none"
