[package]
name = "rfgui"
version = "0.1.0-alpha.6"
edition = "2024"
description = "An innovative gui framework"
license = "MIT"
repository = "https://github.com/jakehuang2232/rfgui"
build = "build.rs"

[workspace]
members = [
    "rsx-macro",
    "lib/rfgui-components",
    "lib/rfgui-segmenter",
    "examples",
]

[dependencies]
wgpu = { version = "30.0.0", features = ["naga-ir"] }
bytemuck = { version = "1.14", features = ["derive"] }
once_cell = "1.21.3"
image = { version = "0.25", default-features = false, features = ["default-formats"] }
resvg = "0.47.0"
rfgui-rsx = { version = "0.1.0-alpha.3", path = "rsx-macro" }
rfgui-segmenter = { version = "0.1.0-alpha.1", path = "lib/rfgui-segmenter" }
glam = "0.33.2"
rustc-hash = "2"
naga_oil = { version = "0.22", default-features = false }
naga = "30.0.0"
naga29 = { package = "naga", version = "29", features = ["wgsl-out"] }
smol_str = "0.3"
bitflags = "2"
slotmap = "1.0"
parley = "0.11.0"
swash = "0.2.7"

[dev-dependencies]
pollster = "0.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.6.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-time = "1"
web-sys = { version = "0.3.85", features = ["HtmlCanvasElement", "HtmlElement", "CssStyleDeclaration", "Document", "FontFace", "FontFaceSet", "Response", "Window"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2"

[patch.crates-io]
icu_segmenter = { path = "vendor/icu_segmenter_rfgui_shim" }

[profile.dev]
opt-level = 1

[profile.web-debug]
inherits = "dev"
debug = 2
strip = "none"

[profile.web-release]
inherits = "release"
debug = 2
strip = "none"
