[package]
name = "examples"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "00_hello_world"
path = "bin/00_hello_world/main.rs"

[[bin]]
name = "01_window"
path = "bin/01_window/main.rs"

[[bin]]
name = "99_app_trait_demo"
path = "bin/99_app_trait_demo/main.rs"

[dependencies]
rfgui = { path = ".." }
rfgui-components = { path = "../lib/rfgui-components" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
winit = "0.30.13"
wgpu = "29.0.1"
bytemuck = { version = "1.14", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"
rfd = "0.17.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rlsf = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-time = "1"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3.85", features = [
    "console",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "FocusEvent",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "MouseEvent",
    "PointerEvent",
    "WheelEvent",
    "Window",
] }
