[package]
name = "rfgui-rsx"
version = "0.1.0-alpha.2"
edition = "2024"
description = "rsx support for rfgui"
license = "MIT"
repository = "https://github.com/jakehuang2232/rfgui"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
