[package]
name = "rfgui-segmenter"
version = "0.1.0-alpha.1"
edition = "2024"
description = "Cross-platform word segmentation for rfgui — wraps OS-native text services where available, falls back to UAX#29."
license = "MIT"
repository = "https://github.com/jakehuang2232/rfgui"

[dependencies]
unicode-segmentation = "1.12"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Data_Text",
    "Foundation_Collections",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
